--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "host": "next dev --turbopack --hostname 0.0.0.0"
   },
   "dependencies": {
     "react": "19.1.0",
