--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "next dev --turbopack --hostname 0.0.0.0"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "next": "15.4.3",
     "react": "19.1.0",
