--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "host": "next dev --turbopack --hostname 0.0.0.0"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.34.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
+    "motion": "^12.23.9",
     "next": "15.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
