--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "motion": "^12.23.9",
     "next": "15.4.8",
     "react": "19.1.2",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.1.2",
     "react-markdown": "^10.1.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
