fix: resolving issue with package mismatches

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "dotenv": "^17.2.1",
     "ldrs": "^1.1.7",
     "motion": "^12.23.9",
-    "next": "15.4.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.8",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-markdown": "^10.1.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
